# swagger/openapi.yaml
@@ -25,7 +25,7 @@ paths:
       summary: Busca um cliente direto no Asaas
       parameters:
         - in: query
-          name: externalReference
+          name: id
           required: true
           schema:
             type: string
@@ -56,7 +56,7 @@ paths:
       summary: Consulta pagamento direto no Asaas
       parameters:
         - in: query
-          name: externalReference
+          name: id
           required: true
           schema:
             type: string
@@ -88,7 +88,7 @@ paths:
       summary: Cancela uma assinatura
       parameters:
         - in: query
-          name: externalReference
+          name: id
           required: true
           schema:
             type: string
@@ -119,7 +119,7 @@ paths:
       summary: Consulta nota fiscal direto no Asaas
       parameters:
         - in: query
-          name: externalReference
+          name: id
           required: true
           schema:
             type: string
@@ -168,8 +168,6 @@ components:
           type: string
         postalCode:
           type: string
-        externalReference:
-          type: string
         notificationDisabled:
           type: boolean
         additionalEmails:
@@ -191,7 +189,7 @@ components:
       properties:
         customer:
           type: string
-          description: ExternalReference do cliente no seu sistema.
+          description: ID do cliente no seu sistema.
         billingType:
           type: string
         value:
@@ -203,8 +201,6 @@ components:
           type: string
         installmentCount:
           type: integer
-        externalReference:
-          type: string
         callback:
           $ref: '#/components/schemas/PaymentCallback'
     PaymentResponse:
@@ -240,7 +236,7 @@ components:
       properties:
         customer:
           type: string
-          description: ExternalReference do cliente no seu sistema.
+          description: ID do cliente no seu sistema.
         billingType:
           type: string
         value:
@@ -249,8 +245,6 @@ components:
           type: string
           format: date
         cycle:
-          type: string
-        externalReference:
           type: string
         description:
           type: string
@@ -270,8 +264,6 @@ components:
           type: string
         value:
           type: number
-        externalReference:
-          type: string
     InvoiceRequest:
       type: object
       required: [payment, serviceDescription, observations, value, deductions, effectiveDate, municipalServiceName, taxes]
